# Taasim_Data_engineering

./: .dockerignore  .gitignore  4weeksResume.md  ADR2  DataClean.ipynb  DataCleankawtar.ipynb  Dockerfile  ProducerGps.py  ProducerTrips.py  README.MD  README.md  README_TaaSim_Architecture.md  RUN_INSTRUCTIONS.md  api_stub.py  cassandra_schema.cql  docker-compose.yaml  job1_gps_normalizer.py  job2_demand_aggregator.py  main.py  pdf_text.txt  pyproject.toml  requirements.txt  test.py  week3and4.ipynb  week4.ipynb
PRODUCERS/: ProducerTrips.py
Taasim_Data_engineering/: ProducerGps.py  README.MD  architecture.md  cassandra_schema.cql  test.py  week3.ipynb
config/kafka/: connect-s3-raw-archive.json
contracts/: processed.gps.schema.json
docker/: Dockerfile.api  Dockerfile.flink  docker-compose.yaml
docs/: Pitch_Deck_Outline.md  README.md  Technical_Report.md  architecture.md  mapping_documentation.md  week2.md  week3and4.md  week4.md  week5_explanation.md  week5_explinantion.md  week7.md  week8.md
docs/weekly_updates/: week5.md
infra/docker/: Dockerfile.api  Dockerfile.flink
notebooks/: DataClean.ipynb  Week5_Analytics_Exploration.ipynb  Week5_Task_Explanation.ipynb  infos.ipynb  week5.ipynb  week6.ipynb
research/: capstone_pdf_extracted.txt
scripts/jobs/: casablanca_batch_etl.py  job2_demand_aggregator.py  job3_trip_matcher.py
scripts/producers/: Generate_Real_Routes.py
src/api/: api_stub.py  (+1 more)
taasim/: __init__.py  auth.py  config.py  kafka_service.py  logging_config.py  main.py  spark_service.py
tests/: test_api.py
weeks/: week5.ipynb  week6.ipynb
(+36 files in other folders)
