[project]
name = "taasim"
version = "0.1.0"
description = "TaaSim mobility data engineering and forecasting API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.dependencies]
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.9.0"
kafka-python = "^2.0.2"
pyspark = "^3.5.1"
pytest = {version = "^8.4.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
